# DataBaseC

./: CMakeLists.txt  main.cpp
AFDataBase/: bd2i.txt  bdi.txt  testalpha
HEADER/: Affichage.h  DataBase.h  Metadonnee.h  Structure.h  Utile.h
